using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace MonsterTradingCards.Card
{
    internal enum ElementType
    {
        WATER,
        FIRE,
        NORMAL
    }
}
