using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace MonsterTradingCards.Server.BattleLogic.Battle
{
    internal enum BattleState
    {
        WAITING,
        IN_PROGRESS,
        DONE,
        NONE
    }
}
